[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/NotoSans.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sprites/Image 520.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Image 493.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Image 522.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Buttons.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "PopUp"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "popAway"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Level" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Level"]
margin_left = -158.0
margin_top = 141.0
margin_right = 528.0
margin_bottom = 414.0
rect_scale = Vector2( 0.2, 0.2 )
custom_colors/font_outline_modulate = Color( 0.384314, 0.45098, 0.894118, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 20
custom_fonts/font = ExtResource( 2 )
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Level/Label"]
anims/PopUp = SubResource( 1 )
anims/RESET = SubResource( 2 )
anims/popAway = SubResource( 3 )

[node name="Timer" type="Timer" parent="Level/Label"]
wait_time = 3.0
one_shot = true

[node name="Score" type="Control" parent="."]
margin_left = 2.0
margin_right = 42.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Score"]
margin_left = 199.0
margin_top = 180.0
margin_right = 199.0
margin_bottom = 180.0
rect_scale = Vector2( 0.03, 0.03 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image520" type="Sprite" parent="Score/NinePatchRect"]
position = Vector2( 324, 149 )
scale = Vector2( 7.2763, 4.76244 )
texture = ExtResource( 3 )

[node name="Label2" type="Label" parent="Score/NinePatchRect"]
margin_left = -721.183
margin_top = -1171.05
margin_right = -265.183
margin_bottom = -898.052
rect_scale = Vector2( 5, 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "100P"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart1" type="Sprite" parent="Score/NinePatchRect"]
position = Vector2( -11794.9, -3021.77 )
scale = Vector2( -0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( -21643.1, 8219.25 )

[node name="Heart2" type="Sprite" parent="Score/NinePatchRect"]
position = Vector2( -343.461, 1087.87 )
scale = Vector2( -0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Heart3" type="Sprite" parent="Score/NinePatchRect"]
position = Vector2( 316.352, 1087.88 )
scale = Vector2( -0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Heart4" type="Sprite" parent="Score/NinePatchRect"]
position = Vector2( 946.168, 1087.88 )
scale = Vector2( -0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Heart5" type="Sprite" parent="Score/NinePatchRect"]
position = Vector2( 1605.98, 1087.87 )
scale = Vector2( -0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Buttons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="Buttons"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -200.0
margin_right = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TouchScreenButton" parent="Buttons/ReferenceRect"]
position = Vector2( 66, 19 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 5 )
shape_centered = false

[node name="Label" type="Label" parent="Buttons/ReferenceRect/Left"]
margin_left = 285.0
margin_top = 190.0
margin_right = 398.0
margin_bottom = 463.0
rect_scale = Vector2( 1.77715, 1.33017 )
custom_fonts/font = ExtResource( 2 )
text = "L"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect2" type="ReferenceRect" parent="Buttons"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -200.0
margin_right = -400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TouchScreenButton" parent="Buttons/ReferenceRect2"]
position = Vector2( -13, 11 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 5 )

[node name="Label" type="Label" parent="Buttons/ReferenceRect2/Right"]
margin_left = 290.0
margin_top = 185.0
margin_right = 422.0
margin_bottom = 458.0
rect_scale = Vector2( 1.57614, 1.29159 )
custom_fonts/font = ExtResource( 2 )
text = "R"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Level/Label/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Buttons/ReferenceRect/Left" to="Buttons" method="_on_Left_pressed"]
[connection signal="released" from="Buttons/ReferenceRect/Left" to="Buttons" method="_on_Left_released"]
[connection signal="pressed" from="Buttons/ReferenceRect2/Right" to="Buttons" method="_on_Right_pressed"]
[connection signal="released" from="Buttons/ReferenceRect2/Right" to="Buttons" method="_on_Right_released"]
